--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -9,8 +9,8 @@ import Tittle from "./Tittle.astro";
     <li class="mb-10 pl-6">
       <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
       <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">August 2022 - August 2024</time>
-      <h3 class="text-lg md:text-xl font-semibold text-gray-800 dark:text-white">Data Analyst @ SGF Global</h3>
-      <ul class="max-w-md space-y-2 mt-2 text-sm md:text-base text-gray-500 list-inside dark:text-gray-400">
+      <h3 class="text-lg md:text-xl font-semibold text-gray-600 dark:text-white">Data Analyst @ <span class="text-[#FC6D09]">SGF Global</span></h3>
+      <ul class="max-w-md space-y-2 mt-2 text-sm md:text-base text-gray-400 list-inside dark:text-gray-400">
         <li class="flex items-baseline">
           <svg class="w-4 h-4 mr-2 text-green-500 dark:text-green-400 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
@@ -41,8 +41,8 @@ import Tittle from "./Tittle.astro";
     <li class="mb-10 pl-6">
       <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
       <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">May 2021 - March 2022</time>
-      <h3 class="text-lg md:text-xl font-semibold text-gray-800 dark:text-white">Data Specialist @ DHL</h3>
-      <ul class="max-w-md space-y-2 mt-2 text-sm md:text-base text-gray-500 list-inside dark:text-gray-400">
+      <h3 class="text-lg md:text-xl font-semibold text-gray-600 dark:text-white">Data Specialist @ <span class="text-[#FC6D09]">DHL</span></h3>
+      <ul class="max-w-md space-y-2 mt-2 text-sm md:text-base text-gray-400 list-inside dark:text-gray-400">
         <li class="flex items-baseline">
           <svg class="w-4 h-4 mr-2 text-green-500 dark:text-green-400 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
@@ -79,8 +79,8 @@ import Tittle from "./Tittle.astro";
     <li class="mb-10 pl-6">
       <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
       <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">October 2019 - April 2021</time>
-      <h3 class="text-lg md:text-xl font-semibold text-gray-800 dark:text-white">Data Analyst @ Intel Corporation</h3>
-      <ul class="max-w-md space-y-2 mt-2 text-sm md:text-base text-gray-500 list-inside dark:text-gray-400">
+      <h3 class="text-lg md:text-xl font-semibold text-gray-600 dark:text-white">Data Analyst @ <span class="text-[#FC6D09]">Intel Corporation</span></h3>
+      <ul class="max-w-md space-y-2 mt-2 text-sm md:text-base text-gray-400 list-inside dark:text-gray-400">
         <li class="flex items-baseline">
           <svg class="w-4 h-4 mr-2 text-green-500 dark:text-green-400 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
